add fw version field to some wb-map templates

--- a/templates/config-map12e-fw2.json.jinja
+++ b/templates/config-map12e-fw2.json.jinja
@@ -4,7 +4,8 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "MAP12\u0002E"
+            "signature": "MAP12E",
+            "fw": "2.0.0"
         }
     ],
     "device": {
