--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -19,7 +19,6 @@
         "id": "{{ device_id }}",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
-        "frame_timeout_ms": 8,
         "enable_wb_continuous_read": true,
 
         "groups": [
@@ -473,7 +472,14 @@
                 "Battery Temperature": "Температура батареи",
                 "Battery Capacity": "Уровень заряда батареи",
 
-
+                "Charging": "Заряжается",
+                "Fully Charged": "Полностью заряжена",
+                "Discharging": "Разряжается",
+                "Normal": "Норма",
+                "Cold, Not Working": "Низкая, работа запрещена",
+                "Cold, Only Discharge": "Низкая, только разряд",
+                "Overheat, Only Discharge": "Высокая, только разряд",
+                "Overheat, Not Working": "Высокая, работа запрещена",
 
                 "Button": "Кнопка",
                 "Button State": "Состояние кнопки",
