--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -92,6 +92,7 @@
             },
             {
                 "id": "output_voltage_setpoint",
+                "description": "output_voltage_setpoint_description",
                 "title": "Output Voltage (V)",
                 "address": 17,
                 "reg_type": "holding",
@@ -439,6 +440,8 @@
             "en": {
                 "template_title": "{{ title_en }}",
 
+                "g_output_voltage_description": "Output voltage is always 11.5V when powered by button.<br>In automatic mode, output voltage is automatically adjusted to input voltage.<br>In manual mode, when input voltage drops below setpoint, backup power is activated.",
+
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value."
             },
             "ru": {
@@ -452,7 +455,8 @@
                 "Output Voltage When Powered Up by Button (V)": "Выходное напряжение при включении кнопкой (В)",
 
                 "g_button_description": "Кнопка на модуле WB-UPS v.3 может использоваться для управления другими устройствами через правила.<br><br>При наличии внешнего питания кнопка не выполняет никаких действий на модуле WB-UPS v.3.<br>При отсутствии внешнего питания длинное нажатие отключает WB-UPS v.3.<br><br>Параметры нажатий фиксированы:<br>- время длинного нажатия: 2000 мс<br>- время ожидания второго нажатия: 300 мс<br><br>",
-                "g_output_voltage_description": "Выходное напряжение при включении кнопкой всегда 12 В.<br>В автоматическом режиме выходное напряжение автоматически подстраивается под входное.<br>В ручном режиме при понижении входного напряжения ниже заданного уровня включается резервное питание.",
+                "g_output_voltage_description": "Выходное напряжение при включении кнопкой всегда 11.5 В.<br>В автоматическом режиме выходное напряжение автоматически подстраивается под входное.<br>В ручном режиме при понижении входного напряжения ниже заданного уровня включается резервное питание.",
+                "output_voltage_setpoint_description": "Должно быть как минимум на 0.7 В ниже входного напряжения.",
 
                 "Uninterruptible Power Supply": "Резервное питание",
                 "Mode": "Режим",
