--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -485,6 +485,17 @@
                 "Cold, Only Discharge": "Низкая, только разряд",
                 "Overheat, Only Discharge": "Высокая, только разряд",
                 "Overheat, Not Working": "Высокая, работа запрещена",
+                "Heater State": "Нагреватель",
+                "Temperature Hardware Protection": "Защита от перегрева",
+                "Heater Force Control": "Принудительное управление нагревателем",
+                "Heater Force Control State": "Состояние нагревателя в принудительном режиме",
+                "Charger Current Setpoint": "Уставка тока заряда",
+                "Discharger Voltage Setpoint": "Уставка выходного напряжения",
+                "Discharge Current Limit": "Ограничение тока разряда",
+                "VINREG Setpoint": "Уставка VINREG",
+                "Heater": "Нагреватель",
+                "Charge/Discharge": "Заряд/Разряд",
+                "Chip ADC Values": "Значения АЦП чипов",
 
                 "Button": "Кнопка",
                 "Button State": "Состояние кнопки",
