--- a/templates/config-wb-mir_v2_buttons.json.jinja
+++ b/templates/config-wb-mir_v2_buttons.json.jinja
@@ -8,7 +8,7 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "WB-MIR v2"
+            "signature": "WBMIR3"
         }
     ],
     "device": {
@@ -128,7 +128,7 @@
             "safety_action": {
                 "title": "Safety Action",
                 "group": "g_safety",
-                "address": 9,
+                "address": 956,
                 "order": 2,
                 "reg_type": "holding",
                 "enum": [0, 1],
@@ -142,7 +142,7 @@
                 "title": "Safety Command",
                 "group": "g_safety",
                 "description": "safety_command_description",
-                "address": 10,
+                "address": 957,
                 "order": 3,
                 "reg_type": "holding",
                 "min": 1,
