--- a/templates/config-wb-mwac2.json.jinja
+++ b/templates/config-wb-mwac2.json.jinja
@@ -15,7 +15,7 @@
 {% set IN_MODE_FLOOD_SENSOR = 5 -%}
 {
     "title": "WB-MWAC_template_title",
-    "device_type": "WB-MWAC-v2 deprecated",
+    "device_type": "WB-MWAC-v2",
     "group": "g-wb",
     "deprecated": true,
         "hw": [
