--- a/templates/config-wb-mwac2_ver2.json.jinja
+++ b/templates/config-wb-mwac2_ver2.json.jinja
@@ -689,12 +689,18 @@
                 "group": "hw_info"
             },
             {
-                "name": "Battery State (2 - good, 1 - normal, 0 - replacement required), measured at module startup",
+                "name": "Battery State, measured at module startup",
                 "id": "Battery State",
                 "reg_type": "input",
                 "address": 971,
                 "type": "value",
                 "enabled": false,
+                "enum": [0, 1, 2],
+                "enum_titles": [
+                    "replacement required",
+                    "normal",
+                    "good"
+                ],
                 "group": "hw_info"
             },
             {
@@ -796,7 +802,10 @@
                 "Uptime": "Время работы",
                 "MCU Temperature": "Температура МК",
                 "MCU Voltage": "Напряжение питания МК",
-                "Battery State (2 - good, 1 - normal, 0 - replacement required), measured at module startup": "Состояние батарейки (2 — отличное, 1 — норма, 0 — требуется замена), измерено при включении модуля",
+                "Battery State, measured at module startup": "Состояние батарейки, измерено при включении модуля",
+                "replacement required": "требуется замена",
+                "normal": "нормальное",
+                "good": "хорошее",
                 "iVout Overloaded": "Выход iVout перегружен",
 
                 "do nothing": "нет действия",
