WB-MAP templates: Add default values for Turns and Phi

--- a/templates/config-map12e-fw2.json.jinja
+++ b/templates/config-map12e-fw2.json.jinja
@@ -59,6 +59,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel{{ch_num}}_l1",
                 "order": 1
             },
@@ -69,6 +70,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel{{ch_num}}_l1",
                 "order": 2
             },
@@ -102,6 +104,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel{{ch_num}}_l2",
                 "order": 1
             },
@@ -112,6 +115,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel{{ch_num}}_l2",
                 "order": 2
             },
@@ -145,6 +149,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel{{ch_num}}_l3",
                 "order": 1
             },
@@ -155,6 +160,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel{{ch_num}}_l3",
                 "order": 2
             },
