add full discharged status

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -154,7 +154,8 @@
                 "enum_titles": [
                     "Charging",
                     "Fully Charged",
-                    "Discharging"
+                    "Discharging",
+                    "Fully Discharged"
                 ],
                 "group": "gg_ups_channels"
             },
@@ -512,6 +513,7 @@
                 "Charging": "Заряжается",
                 "Fully Charged": "Полностью заряжена",
                 "Discharging": "Разряжается",
+                "Fully Discharged": "Полностью разряжена",
                 "Normal": "Норма",
                 "Cold, Not Working": "Низкая, работа запрещена",
                 "Cold, Only Discharge": "Низкая, только разряд",
