--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -150,7 +150,7 @@
                 "read_only": true,
                 "reg_type": "input",
                 "address": 0,
-                "enum": [0, 1, 2],
+                "enum": [0, 1, 2, 3],
                 "enum_titles": [
                     "Charging",
                     "Fully Charged",
