add not charging battery state

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -150,12 +150,13 @@
                 "read_only": true,
                 "reg_type": "input",
                 "address": 0,
-                "enum": [0, 1, 2, 3],
+                "enum": [0, 1, 2, 3, 4],
                 "enum_titles": [
                     "Charging",
                     "Fully Charged",
                     "Discharging",
-                    "Fully Discharged"
+                    "Fully Discharged",
+                    "Not Charging"
                 ],
                 "group": "gg_ups_channels"
             },
@@ -514,6 +515,7 @@
                 "Fully Charged": "Полностью заряжена",
                 "Discharging": "Разряжается",
                 "Fully Discharged": "Полностью разряжена",
+                "Not Charging": "Не заряжается",
                 "Normal": "Норма",
                 "Cold, Not Working": "Низкая, работа запрещена",
                 "Cold, Only Discharge": "Низкая, только разряд",
