enable sporadic for 0 and 1 regs

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -150,6 +150,7 @@
                 "read_only": true,
                 "reg_type": "input",
                 "address": 0,
+                "sporadic": true,
                 "enum": [0, 1, 2, 3, 4],
                 "enum_titles": [
                     "Charging",
@@ -166,6 +167,7 @@
                 "read_only": true,
                 "reg_type": "input",
                 "address": 1,
+                "sporadic": true,
                 "enum": [0, 1, 2, 3, 4],
                 "enum_titles": [
                     "Normal",
