Add separate device signature for WB-MRM2-mini/NC

--- a/templates/config-wb-mrm2-mini-nc.json.jinja
+++ b/templates/config-wb-mrm2-mini-nc.json.jinja
@@ -5,6 +5,11 @@
     "title": "WB-MRM2-mini-NC_template_title",
     "device_type": "WB-MRM2-mini-NC-inputs",
     "group": "g-wb",
+    "hw": [
+        {
+            "signature": "WB-MRM2-mini/NC"
+        }
+    ],
     "device": {
         "name": "WB-MRM2-mini/NC",
         "id": "wb-mrm2-mini-nc",
