--- a/templates/config-wb-mrm2-mini.json.jinja
+++ b/templates/config-wb-mrm2-mini.json.jinja
@@ -10,6 +10,9 @@
     "hw": [
         {
             "signature": "WBMR2m"
+        },
+        {
+            "signature": "WB-MRM2-mini/NO"
         }
     ],
     "device": {
